package descuentospoo;

interface EstrategiaDescuento {
    double AplicacionDescuento(double precio);
}

